# autofoam

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  justfile  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml  ci_cd.yml
src/: histogram.rs  interpolation.rs  lib.rs  rosin_rammler.rs  stl.rs  vtk.rs  vtp.rs
src/coordinates/: mod.rs  update_bounds.rs
src/gamma_function/: mod.rs  stirling_approximation.rs
src/histogram/: weighted_histogram.rs
src/stl/: is_ascii.rs  process_ascii_iter.rs  process_binary_iter.rs
src/vtk/: field_manager.rs  geometry.rs  mod.rs  reader.rs
src/vtp/: polygon_areas.rs
tests/: integration_tests.rs  rosin_rammler.rs  stirling_approximation.rs
