[package]
name = "autofoam"
version = "0.3.0"
edition = "2021"
description = "autofoam and related tools"
repository = "https://github.com/bmblb3/autofoam"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
tempfile = "3.23.0"
vtkio = "0.6.3"
