[package]
name = "autofoam"
version = "0.3.6"
edition = "2021"
description = "autofoam and related tools"
repository = "https://github.com/bmblb3/autofoam"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
color-eyre = "0.6.5"
roots = "0.0.8"
statrs = "0.18.0"
tempfile = "3.23.0"
uuid = { version = "1.18.1", features = ["v4"] }
vtkio = "0.6.3"

[dev-dependencies]
approx = "0.5.1"
rstest = "0.26.1"
